--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,6 @@
 {
+  "name":"@polyseam/inflate_response",
+  "version":"1.1.0",
   "tasks": {
     "dev": "deno run --watch main.ts",
     "test": "deno test -A"
