--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,16 @@
 {
   "name": "@polyseam/inflate_response",
   "version": "1.1.0",
+  "exports": "./mod.ts",
   "tasks": {
     "dev": "deno run --watch main.ts",
     "test": "deno test -A"
   },
-  "exports": "./mod.ts"
+  "imports": {
+    "@std/path": "jsr:@std/path@0.214.0",
+    "@std/archive": "jsr:@std/archive@0.214.0",
+    "@std/fs": "jsr:@std/fs@0.214.0",
+    "@std/io": "jsr:@std/io@0.214.0",
+    "@std/assert": "jsr:@std/assert@0.214.0"
+  }
 }
