--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -15,6 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: use deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.42
+
       - name: Check formatting
         run: deno fmt --check
         
