--- a/deno.json
+++ b/deno.json
@@ -11,10 +11,10 @@
     ".github"
   ],
   "imports": {
-    "@std/path": "jsr:@std/path@0.214.0",
     "@std/archive": "jsr:@std/archive@0.214.0",
+    "@std/assert": "jsr:@std/assert@^0.221.0",
     "@std/fs": "jsr:@std/fs@0.214.0",
     "@std/io": "jsr:@std/io@0.214.0",
-    "@std/assert": "jsr:@std/assert@0.214.0"
+    "@std/path": "jsr:@std/path@0.214.0"
   }
 }
